--- a/task1/exercise.html
+++ b/task1/exercise.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="task14.css">
+    <link rel="stylesheet" href="layout.css">
+    <link rel="stylesheet" href="exercise.css">
 </head>
+
 <body>
     <main>
         <section id="intro">
             <div class="overlay"></div>
-            <div class="container row">
+            <div class="container">
+                <div class="col-lg-9">
                     <h1>Startup you can build a website online using the Bootstrap builder.</h1>
                     <button>Visit Our Works</button>
-                </form>
+                </div>
             </div>
         </section>
     </main>
 </body>
+
 </html>
